--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "devhelp/hash",
-    "description": "",
+    "description": "Introduces HashGenerator class that can be used to register and use different hash algorithms",
     "keywords": ["hash"],
     "homepage": "http://devhelp.pl",
     "license": "MIT",
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3"
     },
     "require-dev": {
         "phpspec/phpspec": "~2",
